--- a/INDChicken/Base.lproj/Main.storyboard
+++ b/INDChicken/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wu2-CT-VEe">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -14,7 +15,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wu2-CT-VEe" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="7Zd-yw-bg4">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -31,19 +32,51 @@
             <objects>
                 <viewController id="QtO-77-zxV" customClass="ViewController" customModule="INDChicken" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mSB-DV-kcz">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Aak-ku-xqb">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="690"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="AV7-rH-Jiz">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Menu" rowHeight="124" id="AV7-rH-Jiz">
+                                        <rect key="frame" x="0.0" y="44.666666030883789" width="375" height="124"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AV7-rH-Jiz" id="iuF-0Z-B2L">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="124"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yba-B3-BmW">
+                                                    <rect key="frame" x="20" y="11" width="102" height="102"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="가격" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xeh-cW-OE0">
+                                                    <rect key="frame" x="237" y="81" width="122" height="32"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="122" id="ehm-PO-GA3"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="메뉴" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vEH-kr-96O">
+                                                    <rect key="frame" x="130" y="11" width="260" height="41"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="32" id="VB9-HC-nc8"/>
+                                                        <constraint firstAttribute="width" constant="260" id="eLj-bH-ecH"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="vEH-kr-96O" firstAttribute="leading" secondItem="Yba-B3-BmW" secondAttribute="trailing" constant="8" id="FRv-m0-jeY"/>
+                                                <constraint firstItem="xeh-cW-OE0" firstAttribute="top" secondItem="vEH-kr-96O" secondAttribute="bottom" constant="38" id="P9u-31-BLM"/>
+                                                <constraint firstItem="xeh-cW-OE0" firstAttribute="bottom" secondItem="iuF-0Z-B2L" secondAttribute="bottomMargin" id="bbH-yp-Br7"/>
+                                                <constraint firstItem="vEH-kr-96O" firstAttribute="top" secondItem="Yba-B3-BmW" secondAttribute="top" id="iTN-Ox-wse"/>
+                                                <constraint firstItem="xeh-cW-OE0" firstAttribute="trailing" secondItem="iuF-0Z-B2L" secondAttribute="trailingMargin" id="m9k-K4-ClQ"/>
+                                                <constraint firstItem="xeh-cW-OE0" firstAttribute="bottom" secondItem="Yba-B3-BmW" secondAttribute="bottom" id="v6y-ND-gKs"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -60,6 +93,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="인드치킨" id="jxo-Ft-FuU">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="cart.fill" catalog="system" style="plain" id="EtR-lL-jEU">
+                            <color key="tintColor" name="AccentColor"/>
                             <connections>
                                 <segue destination="9DL-Qu-lHJ" kind="popoverPresentation" popoverAnchorBarButtonItem="EtR-lL-jEU" id="0NR-Z2-pNy">
                                     <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
@@ -70,26 +104,41 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ys1-cP-Kfw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="969.56521739130437" y="-200.22321428571428"/>
+            <point key="canvasLocation" x="969.23076923076917" y="-200.47393364928908"/>
         </scene>
-        <!--View Controller-->
+        <!--Shop Controller-->
         <scene sceneID="OcK-Z4-GJ9">
             <objects>
-                <viewController id="9DL-Qu-lHJ" sceneMemberID="viewController">
+                <viewController id="9DL-Qu-lHJ" customClass="ShopController" customModule="INDChicken" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PIv-1F-g0B">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="758"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="d33-IJ-jfu">
                                 <rect key="frame" x="0.0" y="54" width="414" height="739"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="mFG-eg-Leg">
+                                        <rect key="frame" x="0.0" y="44.666666030883789" width="414" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mFG-eg-Leg" id="U70-di-7JJ">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fai-eH-a8Y">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="장바구니" id="xS4-dF-x9X">
-                                        <barButtonItem key="rightBarButtonItem" title="닫기" style="plain" id="PJZ-xT-g4K"/>
+                                        <barButtonItem key="rightBarButtonItem" title="닫기" style="plain" id="PJZ-xT-g4K">
+                                            <connections>
+                                                <action selector="Dismiss:" destination="9DL-Qu-lHJ" id="ogo-Th-ojY"/>
+                                                <segue destination="B2p-CO-nJL" kind="unwind" unwindAction="Dismiss:" id="Yv4-ZU-HrS"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -106,12 +155,17 @@
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E5s-x4-fU6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="B2p-CO-nJL" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1718.840579710145" y="-200.22321428571428"/>
         </scene>
     </scenes>
+    <color key="tintColor" name="AccentColor"/>
     <resources>
         <image name="cart.fill" catalog="system" width="128" height="102"/>
+        <namedColor name="AccentColor">
+            <color red="0.8901960784313725" green="0.32156862745098036" blue="0.23137254901960785" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
