--- a/INDChicken/Base.lproj/Main.storyboard
+++ b/INDChicken/Base.lproj/Main.storyboard
@@ -114,7 +114,7 @@
         <!--Shop Controller-->
         <scene sceneID="OcK-Z4-GJ9">
             <objects>
-                <viewController id="9DL-Qu-lHJ" customClass="ShopController" customModule="INDChicken" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Shop" id="9DL-Qu-lHJ" customClass="ShopController" customModule="INDChicken" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PIv-1F-g0B">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
